--- a/app/globals.css
+++ b/app/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 body {
-  font-family: var(--font-proxima-nova);
+  font-family: var(--font-roboto);
 }
 
 @layer utilities {
